[WFLY-10772] --add-modules java.se for modular.jdk.args in jdk9 module